Prevent scrollbar from resizing viewport while appearing.

--- a/src/client/src/index.scss
+++ b/src/client/src/index.scss
@@ -17,6 +17,7 @@ using universal selector - global reset */
 
 html {
   font-size: 100%;
+  margin-left: calc(100vw - 100%);
 }
 
 body {
